language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_negative_int_decimal_to_octal.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() { -111 }"
---
----- BEFORE ACTION
pub fn main() { -111 }
                 ↑    


----- AFTER ACTION
pub fn main() { -0o157 }
