language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_negative_int_decimal_to_octal_in_constants.snap
---
source: language-server/src/tests/action.rs
expression: const wibble = -111
---
----- BEFORE ACTION
const wibble = -111
                ↑  


----- AFTER ACTION
const wibble = -0o157
