language-server/src/tests/snapshots/gleam_language_server__tests__action__convert_negative_int_hexadecimal_to_binary_in_constants.snap
---
source: language-server/src/tests/action.rs
expression: const wibble = -0x6f
---
----- BEFORE ACTION
const wibble = -0x6f
                ↑   


----- AFTER ACTION
const wibble = -0b1101111
